--- a/backend/config.env.example
+++ b/backend/config.env.example
@@ -1,9 +1,11 @@
-# Passive CAPTCHA Environment Configuration
+# Passive CAPTCHA Multi-Tenant Environment Configuration
+# Copy this file to .env and fill in your secure values
 
 # API Configuration
 PORT=5000
-FLASK_ENV=development
-SECRET_KEY=your-super-secret-key-change-this-in-production
+FLASK_ENV=production
+SECRET_KEY=your-very-secure-secret-key-min-32-chars-12345678901234567890
+DEBUG=false
 
 # ML Model Configuration
 MODEL_PATH=models/passive_captcha_rf.pkl
@@ -11,15 +13,26 @@ CONFIDENCE_THRESHOLD=0.6
 
 # Database Configuration
 DATABASE_URL=sqlite:///passive_captcha.db
+# For PostgreSQL: DATABASE_URL=postgresql://user:password@localhost:5432/passive_captcha
 
 # Admin Panel Configuration
-ADMIN_SECRET=admin-password-change-this
+ADMIN_SECRET=your-very-secure-admin-secret-change-this-in-production-123456
+
+# Multi-tenant JWT Configuration
+JWT_SECRET_KEY=your-jwt-secret-key-for-website-tokens-min-32-chars-123456789012
 
 # Rate Limiting
-RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_REQUESTS=1000
 
 # CORS Configuration (comma-separated origins)
 ALLOWED_ORIGINS=http://localhost:3000,https://passive-captcha.vercel.app
+
+# Multi-tenant Platform URLs
+API_BASE_URL=https://your-api-domain.com
+DASHBOARD_BASE_URL=https://your-dashboard-domain.com
+
+# Redis Configuration (Recommended for production)
+REDIS_URL=redis://localhost:6379
 
 # Optional: External API Keys (for future integrations)
 # ANALYTICS_API_KEY=your-analytics-key
