fix: Render deployment configuration
✅ Fixed Render.com deployment issues:
- Fixed build command: ./render-build.sh
- Fixed start command: cd backend && python render_start.py
- Removed scipy dependency (requires Fortran compiler)
- Added requirements-render.txt (cloud-optimized)
- Added proper Gunicorn WSGI configuration
- Created render_start.py for production startup
- Updated README with Render deployment instructions

🚀 Ready for cloud deployment:
- Build Command: ./render-build.sh
- Start Command: cd backend && python render_start.py
- Environment: FLASK_ENV=production, ADMIN_SECRET=Admin123

🎯 Expected: Successful Render deployment with working /login endpoint

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -48,8 +48,8 @@ python-dateutil==2.8.2
 # HTTP Client (for external API calls)
 requests==2.31.0
 
-# Data Processing
-scipy==1.12.0
+# Data Processing (remove scipy for Render compatibility)
+# scipy==1.12.0  # Disabled for cloud deployment - requires Fortran compiler
 
 # Development & Testing
 pytest==7.4.2
