--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -39,3 +39,16 @@ python-dateutil==2.8.2
 
 # HTTP Client
 requests==2.31.0
+
+# Geolocation
+geoip2>=4.7.0
+user-agents>=2.2.0
+
+# Excel/Data Export
+openpyxl>=3.1.0
+xlsxwriter>=3.1.0
+
+# Data Validation
+marshmallow==3.20.1
+flask-restx==1.3.0
+jsonschema==4.20.0
