feat: Add comprehensive Render.com deployment configuration
🚀 Deployment Features:
- Enhanced render.yaml with frontend build process
- Comprehensive build script (build_for_render.sh) with error handling
- Deployment validation script (deployment_test.py) for pre-deploy testing
- Frontend build integration with Node.js/NPM support
- Environment variables configuration for production APIs

🔧 Technical Improvements:
- Automated frontend building during Render deployment
- Graceful fallback to API-only mode if frontend build fails
- Build verification and detailed logging
- Error handling for missing dependencies
- Support for both development and production environments

📋 Render.com Configuration:
- Build command: ./build_for_render.sh
- Start command: cd backend && python render_start.py
- Environment variables: VITE_API_URL, VITE_WS_URL, ADMIN_SECRET
- Runtime: Python 3.11 with Node.js support

✅ Fixes:
- Resolves 'Frontend build failed' error on Render.com
- Ensures both backend API and frontend are properly deployed
- Provides comprehensive deployment validation and debugging tools

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: passive-captcha
     env: python
-    buildCommand: "pip install -r backend/requirements-render.txt"
+    buildCommand: "./build_for_render.sh"
     startCommand: "cd backend && python render_start.py"
     plan: free
     runtime: python3.11
@@ -15,4 +15,8 @@ services:
         value: 0.0.0.0
       - key: PORT
         fromGroup: 5003
+      - key: VITE_API_URL
+        value: https://passive-captcha.onrender.com
+      - key: VITE_WS_URL
+        value: wss://passive-captcha.onrender.com
     healthCheckPath: /health
