fix: Include pre-built frontend for Render.com deployment
🚀 Deployment Fix:
- Include pre-built frontend/dist folder in repository
- Simplify render.yaml to only install Python dependencies
- Remove Node.js requirement from Render build process
- Update .gitignore to allow dist folder for deployment

🔧 Changes:
- Pre-built Vue.js frontend with production assets (31 files)
- Simplified Render buildCommand to 'pip install -r backend/requirements-render.txt'
- Backend serves static files from committed dist folder
- Remove VITE_* environment variables (not needed for pre-built)

✅ Resolves:
- 'Frontend build failed' error on Render.com
- Node.js/NPM availability issues during deployment
- Ensures frontend is always available regardless of build environment

This commit makes the deployment more reliable by including
pre-built frontend assets instead of building them on Render.

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: passive-captcha
     env: python
-    buildCommand: "./build_for_render.sh"
+    buildCommand: "pip install -r backend/requirements-render.txt"
     startCommand: "cd backend && python render_start.py"
     plan: free
     runtime: python3.11
@@ -15,8 +15,6 @@ services:
         value: 0.0.0.0
       - key: PORT
         fromGroup: 5003
-      - key: VITE_API_URL
+      - key: RENDER_EXTERNAL_URL
         value: https://passive-captcha.onrender.com
-      - key: VITE_WS_URL
-        value: wss://passive-captcha.onrender.com
     healthCheckPath: /health
