--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -9,7 +9,7 @@ gunicorn>=21.2.0
 
 # Essential ML (without scipy/fortran dependencies)
 numpy>=1.26.2
-scikit-learn>=1.4.0
+scikit-learn==1.5.1
 pandas>=2.0.0
 joblib>=1.3.0
 
