Fix API routing, database configuration, and deployment issues
🔧 **Major Fixes Applied:**

**API Routing & CORS:**
- Fixed CORS configuration to dynamically include Render URLs
- Added proper environment detection for API endpoints
- Enhanced SPA routing with comprehensive fallback handling
- Fixed frontend API service to use relative URLs in production

**Database & Performance:**
- Enhanced database connection pooling with pre-ping and recycling
- Added SQLite and PostgreSQL specific optimizations
- Improved error handling for missing modules and services

**Environment Configuration:**
- Fixed port mismatches across Docker configurations (5000 → 5003)
- Synchronized environment variables between dev and production
- Added proper Render deployment environment variables
- Fixed dependency version mismatches (scikit-learn, eventlet)

**Security & Deployment:**
- Removed hardcoded admin credentials from render.yaml
- Enhanced error handling for optional modules (ML, WebSocket, etc.)
- Added comprehensive module import protection
- Improved static asset serving with proper MIME types

**Production Optimizations:**
- Fixed Docker production port configurations
- Added proper health checks and startup validation
- Enhanced logging and monitoring configurations
- Optimized build process for Render deployment

This resolves the main deployment issues: CORS errors, SPA refresh problems,
invalid login issues, and environment variable mismatches.

--- a/render.yaml
+++ b/render.yaml
@@ -22,13 +22,21 @@ services:
       - key: FLASK_ENV
         value: production
       - key: ADMIN_SECRET
-        value: Admin123
+        sync: false
       - key: HOST
         value: 0.0.0.0
       - key: PORT
         fromGroup: 5003
       - key: RENDER_EXTERNAL_URL
         value: https://passive-captcha.onrender.com
+      - key: ALLOWED_ORIGINS
+        value: https://passive-captcha.onrender.com,http://localhost:3000,*
+      - key: API_BASE_URL
+        value: https://passive-captcha.onrender.com
+      - key: WEBSOCKET_URL
+        value: wss://passive-captcha.onrender.com
+      - key: DATABASE_URL
+        value: sqlite:///passive_captcha_production.db
       - key: NODE_VERSION
         value: "18"
     healthCheckPath: /health
