--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,7 +6,7 @@ gunicorn>=21.2.0
 
 # Scientific computing (compatible with Python 3.13)
 numpy>=1.26.2
-scikit-learn>=1.4.0
+scikit-learn==1.5.1
 pandas>=2.0.0
 joblib>=1.3.0
 
@@ -33,6 +33,7 @@ loguru==0.7.2
 flask-socketio>=5.3.0
 redis>=5.0.0
 python-socketio>=5.8.0
+eventlet>=0.33.3
 
 # Data Export
 openpyxl>=3.1.0
