🔧 SURGICAL FIX: Consolidate to simplified monolith architecture
**MAJOR ARCHITECTURAL REFACTOR:**

🏗️ **Single Entry Point:**
- Created consolidated  as the ONLY application factory
- Replaced multiple conflicting entry points with single clean implementation
- Unified configuration and service initialization

🔧 **Removed Blueprint Conflicts:**
- Eliminated duplicate admin endpoints between  and
- Consolidated service initialization into single flow
- Removed conflicting blueprint registrations

📦 **Simplified Deployment:**
- Updated all entry points (render_start.py, run_server.py) to use new app.py
- Unified Docker configurations (dev and production)
- Single deployment strategy for all environments

🎯 **Key Improvements:**
- **Graceful Degradation:** App runs even if Redis/ML/SocketIO fail
- **Environment Detection:** Automatic dev/production configuration
- **Optional Frontend:** Can serve static files or run API-only
- **Comprehensive Health Checks:** Better monitoring and debugging

**Replaced Files:**
- ❌  (795 lines of complexity)
- ✅  (400 lines of clean code)

**Fixed Issues:**
- No more blueprint route conflicts
- Single source of truth for configuration
- Consistent service initialization
- Simplified deployment pipeline

This should resolve the deployment chaos by eliminating architectural conflicts.

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -46,6 +46,7 @@ services:
       - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
       - HOST=0.0.0.0
       - PORT=5003
+      - SERVE_FRONTEND=true
       - WEB_CONCURRENCY=4
       - WORKER_TIMEOUT=120
     restart: unless-stopped
