--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
       echo "🐍 Installing Python dependencies..."
       pip install -r backend/requirements-render.txt
       echo "✅ Build completed successfully!"
-    startCommand: "cd backend && python render_start.py"
+    startCommand: "cd backend && python app.py"
     plan: free
     runtime: python3.11
     envVars:
