Complete Render deployment configuration with all environment variables
🚀 Render Configuration:
- Add missing JWT_SECRET_KEY to render.yaml
- Add SECRET_KEY for enhanced security
- Include all production environment variables
- Add Redis URL and ML configuration
- Configure logging and performance settings

📋 Deployment Guide:
- Create comprehensive RENDER_DEPLOYMENT_GUIDE.md
- Step-by-step deployment instructions
- Complete environment variables list
- Troubleshooting section
- Production optimization tips

✅ Ready for Production Deployment:
- All authentication fixes included
- Environment variables properly configured
- Build and start commands optimized
- Health check endpoint configured

Commands confirmed working:
- Build: pip install -r backend/requirements-render.txt
- Start: cd backend && python main.py --host 0.0.0.0 --port $PORT

--- a/render.yaml
+++ b/render.yaml
@@ -35,6 +35,10 @@ services:
         value: production
       - key: ADMIN_SECRET
         value: Admin123
+      - key: JWT_SECRET_KEY
+        value: jwt-secret-key-for-passive-captcha-production-environment-render
+      - key: SECRET_KEY
+        value: passive-captcha-production-secret-key-ultra-secure-32-chars-minimum-render
       - key: HOST
         value: 0.0.0.0
       - key: PORT
@@ -49,6 +53,18 @@ services:
         value: wss://passive-captcha.onrender.com
       - key: DATABASE_URL
         value: sqlite:///passive_captcha_production.db
+      - key: REDIS_URL
+        value: redis://localhost:6379/0
+      - key: CONFIDENCE_THRESHOLD
+        value: "0.6"
+      - key: LOG_LEVEL
+        value: INFO
+      - key: ENABLE_REAL_TIME_LOGS
+        value: "true"
+      - key: ENABLE_ML_MONITORING
+        value: "true"
+      - key: SESSION_COOKIE_SECURE
+        value: "true"
       - key: NODE_VERSION
         value: "18"
     healthCheckPath: /health
