Fix Railway deployment Docker configuration
🔧 Railway Deployment Fixes:
- ✅ Fixed missing requirements-deploy.txt file
- ✅ Updated Railway config paths (backend/Dockerfile.production → Dockerfile.production)
- ✅ Fixed service directory context (added 'directory: backend')
- ✅ Corrected startCommand paths (removed 'cd backend &&')
- ✅ Fixed Dockerfile.production structure and permissions
- ✅ Made Redis and database connections optional in entrypoint
- ✅ Added dynamic PORT environment variable support
- ✅ Fixed entrypoint script with fallback command

🐳 Docker Improvements:
- Simplified requirements.txt handling (removed requirements-deploy.txt dependency)
- Fixed docker-entrypoint.production.sh permissions and order
- Made Redis connection optional (graceful fallback)
- Made database connection resilient
- Added proper PORT variable handling for Railway
- Improved service initialization logging

📁 File Structure:
- backend/requirements-deploy.txt (created)
- railway.toml (updated paths and context)
- railway.json (updated paths and context)
- backend/Dockerfile.production (fixed structure)
- backend/docker-entrypoint.production.sh (made resilient)

The Railway deployment should now work correctly with proper file paths,
optional Redis, and dynamic port configuration.

--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "backend/Dockerfile.production"
+dockerfilePath = "Dockerfile.production"
 
 [deploy]
 healthcheckPath = "/health"
@@ -14,14 +14,15 @@ name = "passive-captcha-backend"
 [services.source]
 repo = "Riishi-01/Passive-Captcha-Model"
 branch = "main"
+directory = "backend"
 
 [services.build]
 builder = "DOCKERFILE"
-dockerfilePath = "backend/Dockerfile.production"
-buildCommand = "cd backend && pip install -r requirements.txt"
+dockerfilePath = "Dockerfile.production"
+buildCommand = "pip install -r requirements.txt"
 
 [services.deploy]
-startCommand = "cd backend && python main.py --host 0.0.0.0 --port $PORT --gunicorn"
+startCommand = "python main.py --host 0.0.0.0 --port $PORT --gunicorn"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
