--- a/backend/Dockerfile.production
+++ b/backend/Dockerfile.production
@@ -16,14 +16,18 @@ RUN apt-get update && apt-get install -y \
 RUN groupadd -r appuser && useradd -r -g appuser appuser
 
 # Copy requirements first for better caching
-COPY requirements.txt requirements-deploy.txt ./
+COPY requirements.txt ./
 
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements-deploy.txt
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
+
+# Copy production entrypoint script and set permissions
+COPY docker-entrypoint.production.sh /app/
+RUN chmod +x /app/docker-entrypoint.production.sh
 
 # Create necessary directories
 RUN mkdir -p /app/logs /app/uploads /app/tmp && \
@@ -43,19 +47,12 @@ ENV MAX_WORKERS=8
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:5000/health || exit 1
+    CMD curl -f http://localhost:${PORT:-5000}/health || exit 1
 
 # Switch to non-root user
 USER appuser
 
-# Expose port
-EXPOSE 5000
-
-# Production entrypoint
-COPY docker-entrypoint.production.sh /app/
-USER root
-RUN chmod +x /app/docker-entrypoint.production.sh
-USER appuser
+# Expose port (Railway will override this)
+EXPOSE ${PORT:-5000}
 
 ENTRYPOINT ["/app/docker-entrypoint.production.sh"]
-CMD ["gunicorn", "--worker-class", "eventlet", "--workers", "1", "--bind", "0.0.0.0:5000", "--timeout", "120", "--keep-alive", "2", "--max-requests", "1000", "--max-requests-jitter", "100", "--preload", "app.production_app:create_production_app()"]
