Fix Railway deployment configuration issues
- Remove deprecated FLASK_APP environment variable from Dockerfile.production
- Fix PYTHONPATH consistency between Dockerfile (/app) and Railway configs
- Simplify Railway services to single backend service (frontend served by Flask)
- Add explicit dockerfilePath to Railway configuration
- Remove conflicting frontend service that was causing routing issues

--- a/railway.toml
+++ b/railway.toml
@@ -20,7 +20,7 @@ restartPolicyMaxRetries = 3
 [services.variables]
 ENV = "production"
 FLASK_ENV = "production"
-PYTHONPATH = "/app/backend"
+PYTHONPATH = "/app"
 API_BASE_URL = "https://${{RAILWAY_PUBLIC_DOMAIN}}"
 ALLOWED_ORIGINS = "https://${{RAILWAY_PUBLIC_DOMAIN}},https://*.railway.app,https://passive-captcha-model-production.up.railway.app"
 
