🔧 Fix Railway deployment configuration
- Use root Dockerfile instead of backend/Dockerfile.production
- Set correct build context to project root
- Fix PYTHONPATH for proper module imports
- Resolve 'cd executable not found' error

Railway deployment command: python main.py --host 0.0.0.0 --port $PORT --gunicorn

--- a/railway.toml
+++ b/railway.toml
@@ -7,7 +7,8 @@ branch = "main"
 
 [services.build]
 builder = "DOCKERFILE"
-dockerfilePath = "backend/Dockerfile.production"
+dockerfilePath = "Dockerfile"
+buildContext = "."
 
 [services.deploy]
 startCommand = "python main.py --host 0.0.0.0 --port $PORT --gunicorn"
