--- a/railway.toml
+++ b/railway.toml
@@ -11,7 +11,7 @@ dockerfilePath = "Dockerfile"
 buildContext = "."
 
 [services.deploy]
-startCommand = "python main.py --host 0.0.0.0 --port $PORT --gunicorn"
+startCommand = "python main.py --host 0.0.0.0 --gunicorn"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
